0027691: Remove dchrono from all test cases and move its to perf group

Remove performance comparing with hardcoded value.
Test cases for performance of some commands were moved to perf group.

Updated documentation.